fix mobile date picker button heights to prevent overflow, add rounded corners

--- a/web/css/timeline.css
+++ b/web/css/timeline.css
@@ -716,6 +716,12 @@ button:focus {
   border-radius: 5px;
   cursor: pointer;
   height: 44px;
+
+  & .button-action-group {
+    height: 37px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+  }
 }
 
 .datepicker.android-dark .datepicker-header {
